--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.17",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "node": "^21.2.0",
     "npm": "^10.2.4",
