--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.1",
+    "regexpu-core": "^6.0.0",
     "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
